progress on logic

--- a/src/components/Tile.astro
+++ b/src/components/Tile.astro
@@ -69,4 +69,8 @@ const { identifier } = Astro.props;
       opacity: 1;
     }
   }
+
+  .tile.tile-winner {
+    background-color: green;
+  }
 </style>
