--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
   </body>
 </html>
 <script is:inline src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="../js/logic.js"></script>
+<script src="../js/app.js"></script>
 <script>
   import "bootstrap/dist/js/bootstrap.bundle.min.js";
 </script>
